[package]
name = "game_of_life"
version = "0.1.0"
authors = ["Wayne Stewart <waynegaidin@hotmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
#opt-level = "s" # LLVM optimize for size
opt-level = "z" # LLVM optimize for size ( MORE! )

[dependencies]
lazy_static = "1.0"

